--- a/HashCalclator/HashCalclator/HashCalclator.vcxproj
+++ b/HashCalclator/HashCalclator/HashCalclator.vcxproj
@@ -76,12 +76,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="md5.h" />
+    <ClInclude Include="sha1.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="HashCalclator.cpp" />
     <ClCompile Include="md5.cpp" />
+    <ClCompile Include="sha1.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
