--- a/HashCalclator/HashCalclator/HashCalclator.vcxproj.filters
+++ b/HashCalclator/HashCalclator/HashCalclator.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="crc32.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="file.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -48,6 +51,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="crc32.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="file.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
