--- a/HashCalclator/HashCalclator/HashCalclator.vcxproj.filters
+++ b/HashCalclator/HashCalclator/HashCalclator.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="file.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="base64.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -54,6 +57,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="file.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="base64.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
